--- a/Login/loginPage.html
+++ b/Login/loginPage.html
@@ -16,22 +16,7 @@
                      alt="Sample image">
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form>
-<!--                    <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">-->
-<!--                        <p class="lead fw-normal mb-0 me-3">Sign in with</p>-->
-<!--                        <button type="button" class="btn btn-primary btn-floating mx-1">-->
-<!--                            <i class="fab fa-facebook-f"></i>-->
-<!--                        </button>-->
-
-<!--                        <button type="button" class="btn btn-primary btn-floating mx-1">-->
-<!--                            <i class="fab fa-twitter"></i>-->
-<!--                        </button>-->
-
-<!--                        <button type="button" class="btn btn-primary btn-floating mx-1">-->
-<!--                            <i class="fab fa-linkedin-in"></i>-->
-<!--                        </button>-->
-<!--                    </div>-->
-
+                <form name="login">
                     <div class="divider d-flex align-items-center my-4">
                         <p class="text-center fw-bold mx-3 mb-0">We are SalesOps Team</p>
                     </div>
@@ -39,14 +24,14 @@
                     <!-- Email input -->
                     <div class="form-outline mb-4">
                         <input type="email" id="form3Example3" class="form-control form-control-lg"
-                               placeholder="Enter a valid email address" required/>
+                               placeholder="Enter a valid email address" name="userid" required/>
                         <label class="form-label" for="form3Example3">Email address</label>
                     </div>
 
                     <!-- Password input -->
                     <div class="form-outline mb-3">
-                        <input type="password" id="form3Example4" class="form-control form-control-lg"
-                               placeholder="Enter password"  required/>
+                        <input type="password" id="form3Example4"  class="form-control form-control-lg password"
+                               placeholder="Enter password"   name="pswrd" required/>
                         <label class="form-label" for="form3Example4">Password</label>
                     </div>
 
@@ -63,11 +48,8 @@
 
                     <div class="text-center text-lg-start mt-4 pt-2">
                         <button type="submit" class="btn btn-primary btn-lg" id="myButton"
-                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-<!--                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"-->
-<!--                                                                                          class="link-danger">Register</a></p>-->
+                                style="padding-left: 2.5rem; padding-right: 2.5rem;" onclick="check(this.form)">Login</button>
                     </div>
-
                 </form>
             </div>
         </div>
@@ -77,26 +59,9 @@
         <div class="text-white mb-3 mb-md-0">
             Copyright © 2020. All rights reserved.
         </div>
-        <!-- Copyright -->
-
-        <!-- Right -->
-<!--        <div>-->
-<!--            <a href="#!" class="text-white me-4">-->
-<!--                <i class="fab fa-facebook-f"></i>-->
-<!--            </a>-->
-<!--            <a href="#!" class="text-white me-4">-->
-<!--                <i class="fab fa-twitter"></i>-->
-<!--            </a>-->
-<!--            <a href="#!" class="text-white me-4">-->
-<!--                <i class="fab fa-google"></i>-->
-<!--            </a>-->
-<!--            <a href="#!" class="text-white">-->
-<!--                <i class="fab fa-linkedin-in"></i>-->
-<!--            </a>-->
-<!--        </div>-->
-        <!-- Right -->
     </div>
 </section>
 
+<script src="LoginPage.js"></script>
 </body>
 </html>
